--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Teng Tu (涂腾)</title>
   <meta name="description" content="Teng Tu (涂腾) — Multimodal Language Models, Multimedia Retrieval, Music-Language Modeling." />
-  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
+  <!-- Use the repository root favicon.ico (do not override a user-provided favicon) -->
+  <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -24,6 +25,7 @@
           <a href="#education">Education</a>
           <a href="#experience">Experience</a>
           <a href="#skills">Skills</a>
+          <a href="#honors">Honors</a>
           <button class="themeToggle" id="themeToggle" type="button" aria-label="Toggle dark mode" title="Toggle theme"></button>
         </div>
       </nav>
@@ -51,14 +53,9 @@
 
     <section class="section" id="publications">
       <div class="container">
-        <div class="section__header">
-          <h2>Publications</h2>
-          <div class="segmented" role="tablist" aria-label="Publications filter">
-            <button class="segmented__btn is-active" id="pubTabPeer" role="tab" aria-selected="true">Peer‑reviewed</button>
-            <button class="segmented__btn" id="pubTabUnder" role="tab" aria-selected="false">Under review / preprint</button>
-          </div>
-        </div>
+        <h2>Publications</h2>
         <div class="pubs" id="pubList"></div>
+        <p class="note">Click a title to open the local PDF under <code>assets/papers/</code> (you can upload/rename PDFs as you like).</p>
       </div>
     </section>
 
@@ -72,7 +69,7 @@
     <section class="section" id="experience">
       <div class="container">
         <h2>Experience</h2>
-        <div class="timeline" id="expList"></div>
+        <div class="exp" id="expList"></div>
       </div>
     </section>
 
