--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Teng Tu (涂腾)</title>
+  <title>Teng Tu</title>
   <meta name="description" content="Teng Tu (涂腾) — Multimodal Language Models, Multimedia Retrieval, Music-Language Modeling." />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -52,7 +52,6 @@
       <div class="container">
         <h2>Publications</h2>
         <div class="pubs" id="pubList"></div>
-        <p class="note">Click a title to open the local PDF under <code>assets/papers/</code> (you can upload/rename PDFs as you like).</p>
       </div>
     </section>
 
