--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <main id="main">
     <section class="hero" id="about">
       <div class="container hero__grid">
-        <div class="hero__left">
-          <div class="hero__photoWrap" aria-hidden="true">
-            <img id="profilePhoto" class="hero__photo" alt="Profile photo" />
-          </div>
+        <div class="hero__photoWrap" aria-hidden="true">
+          <img id="profilePhoto" class="hero__photo" alt="Profile photo" />
+        </div>
 
+        <div class="hero__content">
           <h1 class="hero__title" id="nameHeading">Teng Tu <span id="nameZh">(涂腾)</span></h1>
           <p class="hero__headline" id="headline">Multimodal Language Models · Multimedia Retrieval · Music-Language Modeling</p>
 
