--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
   <main id="main">
     <section class="hero" id="about">
       <div class="container hero__grid">
-        <div class="hero__photoWrap" aria-hidden="true">
-          <img id="profilePhoto" class="hero__photo" alt="Profile photo" />
+        <div class="hero__photoCol">
+          <div class="hero__photoWrap" aria-hidden="true">
+            <img id="profilePhoto" class="hero__photo" alt="Profile photo" />
+          </div>
+          <h1 class="hero__title" id="nameHeading">Teng Tu <span id="nameZh">(涂腾)</span></h1>
         </div>
 
         <div class="hero__content">
-          <h1 class="hero__title" id="nameHeading">Teng Tu <span id="nameZh">(涂腾)</span></h1>
           <p class="hero__headline" id="headline">Multimodal Language Models · Multimedia Retrieval · Music-Language Modeling</p>
 
           <div class="hero__about" id="aboutText"></div>
