--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="hero__photoWrap" aria-hidden="true">
             <img id="profilePhoto" class="hero__photo" alt="Profile photo" />
           </div>
-          <h1 class="hero__title" id="nameHeading">Teng Tu <span id="nameZh">(涂腾)</span></h1>
+          <h1 class="hero__title" id="nameHeading"> Teng Tu &nbsp <span id="nameZh"> ( 涂腾 ) </span></h1>
         </div>
 
         <div class="hero__content">
